--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
 	"description": "Alarm bot for Mudae from discord.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "nodemon index.js"
 	},
 	"author": "Miro",
 	"license": "ISC",
 	"dependencies": {
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
-		"mongoose": "^5.11.15"
+		"mongoose": "^5.11.15",
+		"nodemon": "^2.0.7",
+		"opusscript": "0.0.7",
+		"simple-youtube-api": "^5.2.1",
+		"ytdl-core": "^3.4.2",
+		"ytdl-core-discord": "^1.2.3"
 	}
 }
