--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "Miro",
 	"license": "ISC",
 	"dependencies": {
+		"crypto-js": "^4.0.0",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"mongoose": "^5.11.18",
