--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 	"author": "Miro",
 	"license": "ISC",
 	"dependencies": {
+		"@top-gg/sdk": "^3.1.1",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"mongoose": "^5.11.18",
 		"nodemon": "^2.0.7",
 		"opusscript": "0.0.7",
 		"simple-youtube-api": "^5.2.1",
+		"topgg-autoposter": "^1.1.10",
 		"ytdl-core": "^4.5.0",
 		"ytdl-core-discord": "^1.2.5"
 	}
